@@ -1,3 +1,13 @@
 dependencies {
-    implementation(rootProject.libs.spring.boot.starter.validation)
-} 
+    implementation(project(":support:logging"))
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.9.25")
+
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs = listOf(
+        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    )
+}
